desenv_tests/test-assets/desenv/failure/desenv_wrong_usage_3.stderr
error: `desenv` struct attribute must be used as list of modifiers
 --> test-assets/desenv/failure/desenv_wrong_usage_3.rs:4:3
  |
4 | #[desenv]
  |   ^^^^^^
