desenv_tests/test-assets/desenv/failure/desenv_wrong_usage_3.rs
use desenv::Desenv;

#[derive(Desenv)]
#[desenv]
struct Config {
    field: String
}

fn main(){}